# hapsira

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  index.ipynb  pyproject.toml  tox.ini
.github/: no-response.yml
.github/ISSUE_TEMPLATE/: new_release.md
.github/workflows/: documentation-links.yaml  test.yaml  validation_trigger.yml
contrib/: README.md  relative.py  rv2tle.py
contrib/CR3BP/: CR3BP.py  README.md  test_run_CR3BP.py
contrib/cr3bp_DhruvJ/: cr3bp_PO_master.py  cr3bp_model_master.py  cr3bp_po_fam_continuation.py  cr3bp_po_plot_orbits.py  example.py  example_3D_orb_fam.py  example_L4_vertical_orb_fam.py  example_L4_vertical_orb_fam_palc.py  example_lyapunov_orb_fam.py
contrib/render/: README.html  README.md  README.rst  example_render.py  requirements.txt  scene.py  tox.ini
contrib/render/docs/source/: conf.py  data_loader.rst  example.rst  index.rst  scene.rst
contrib/render/render/: data_loader.py  scene.py
contrib/render/test/: test_load_data.py  test_scene.py
docs/: Makefile
docs/source/: api.md  background.md  bibliography.md  changelog.md  conf.py  gallery.md  history.md  index.md  installation.md  quickstart.md  related.md
docs/source/examples/: analyzing-NEOs.myst.md  analyzing-the-parker-solar-probe-flybys.myst.md  atmospheric-models.myst.md  catch-that-asteroid.myst.md  comparing-hohmann-and-bielliptic-transfers.myst.md  customising-static-orbit-plots.myst.md  czml-tutorial.myst.md  detecting-events.myst.md  exploring-the-new-horizons-launch.myst.md  generating-orbit-groundtracks.myst.md  going-to-jupiter-with-python-using-jupyter-and-poliastro.myst.md  going-to-mars-with-python-using-poliastro.myst.md  loading-OMM-and-TLE-satellite-data.myst.md  multirevolutions-solution-in-lamberts-problem.myst.md  natural-and-artificial-perturbations.myst.md  plotting-in-3D.myst.md  porkchops-with-poliastro.myst.md  propagation-using-cowells-formulation.myst.md  render-dsk-kernels.myst.md  revisiting-lamberts-problem-in-python.myst.md  studying-hohmann-transfers.myst.md  tisserand.myst.md  visualizing-the-spacex-tesla-roadster-trip-to-mars.myst.md
src/hapsira/: __init__.py  bodies.py  ephem.py  examples.py  io.py  maneuver.py  sensors.py  spheroid_location.py  util.py
src/hapsira/constants/: __init__.py
src/hapsira/core/: czml_utils.py  elements.py  events.py  flybys.py  iod.py  maneuver.py  perturbations.py  spheroid_location.py
src/hapsira/core/earth_atmosphere/: jacchia.py
src/hapsira/core/propagation/: __init__.py  cowell.py  danby.py  farnocchia.py  gooding.py  markley.py  mikkola.py  pimienta.py  recseries.py  vallado.py
src/hapsira/core/thrust/: __init__.py  change_a_inc.py  change_argp.py  change_ecc_inc.py  change_ecc_quasioptimal.py
src/hapsira/czml/: extract_czml.py
src/hapsira/earth/: __init__.py  util.py
src/hapsira/earth/atmosphere/: __init__.py  base.py  coesa62.py  coesa76.py  jacchia.py
src/hapsira/earth/plotting/: __init__.py  groundtrack.py
src/hapsira/frames/: __init__.py  ecliptic.py  equatorial.py  fixed.py  util.py
src/hapsira/iod/: __init__.py  izzo.py  vallado.py
src/hapsira/plotting/: __init__.py  gabbard.py  misc.py  porkchop.py  tisserand.py
src/hapsira/plotting/orbit/: __init__.py  plotter.py
src/hapsira/plotting/orbit/backends/: __init__.py  matplotlib.py  plotly.py
src/hapsira/render/: data_loader.py  setup_dskexp.sh
src/hapsira/threebody/: cr3bp_char_quant.py  flybys.py  restricted.py  soi.py
src/hapsira/twobody/: __init__.py  angles.py  elements.py  events.py  mean_elements.py  sampling.py  states.py
src/hapsira/twobody/orbit/: __init__.py  creation.py  scalar.py
src/hapsira/twobody/propagation/: __init__.py  _compat.py  cowell.py  danby.py  farnocchia.py  gooding.py  markley.py  mikkola.py  pimienta.py  recseries.py  vallado.py
src/hapsira/twobody/thrust/: __init__.py  change_a_inc.py  change_argp.py  change_ecc_inc.py  change_ecc_quasioptimal.py
tests/: conftest.py  test_bodies.py  test_czml.py  test_ephem.py  test_examples.py  test_frames.py  test_hyper.py  test_iod.py  test_maneuver.py  test_sensors.py  test_spheroid_location.py  test_stumpff.py  test_util.py
tests/tests_core/: test_core_propagation.py  test_core_util.py
tests/tests_core/tests_threebody/: test_cr3bp_quantities_calculations.py
tests/tests_earth/: test_earth_util.py  test_earthsatellite.py
tests/tests_earth/tests_atmosphere/: test_coesa62.py  test_coesa76.py  test_jacchia77.py
tests/tests_plotting/: test_gabbard.py  test_misc.py  test_orbit_plotter.py  test_porkchop.py  test_tisserand.py
tests/tests_render/: test_load_data.py  test_scene.py
tests/tests_spacecraft/: test_spacecraft.py
tests/tests_threebody/: test_cr3bp_char_quant.py  test_flybys.py  test_restricted.py  test_soi.py
tests/tests_twobody/: test_angles.py  test_elements.py  test_events.py  test_mean_elements.py  test_orbit.py  test_perturbations.py  test_propagation.py  test_sampling.py  test_states.py  test_thrust.py
